# LensRotaryDecoder

./: .gitignore  .gitmodules  EZ-USB.md  MCU-NET.md  Makefile.am  README.md  configure.ac
FPGA/: rotary_decoder.qpf
FPGA/EPM570/: I2C_to_GPIO.bsf  clk_div.bsf  decoder1.bsf  mux_byte.bsf  rotary_decoder.qsf  uart_sender.bsf  uart_tx.bsf
FPGA/EPM570/db/: rotary_decoder.db_info
FPGA/EPM570/src/: I2C_to_GPIO.v  mux_byte.v  top_i2c.bdf  uart_sender.v
FPGA/MojoV3/: Mojo-Base.xise
FPGA/MojoV3/iseconfig/: Mojo-Base.projectmgr  mojo_top.xreport
FPGA/MojoV3/src/: mojo.ucf  mojo_top.v
FPGA/common/: clk_div.v  decoder1.v  mojo_top.v  uart_tx.v
HW/: Camera_Lens_Optocoupler.kicad_pro  Camera_Lens_Optocoupler.net  EZ-USB_motherboard.kicad_pcb  EZ-USB_motherboard.kicad_prl  HW.kicad_prl  HW.kicad_pro  HW.pro  decoder1-cache.lib  decoder1.kicad_pcb  decoder1.sch
HW/Camera_Lens_Cable/: .gitignore  Camera_Lens_Cable.kicad_prl  Camera_Lens_Cable.kicad_pro  Camera_Lens_Cable.kicad_sch  README.md
HW/Camera_Lens_Optocoupler/: .gitignore  Camera_Lens_Optocoupler.kicad_pcb  Camera_Lens_Optocoupler.kicad_prl  Camera_Lens_Optocoupler.kicad_pro  Camera_Lens_Optocoupler.kicad_sch
HW/EZ-USB_motherboard/: .gitignore  EZ-USB_motherboard.kicad_pcb  EZ-USB_motherboard.kicad_prl  EZ-USB_motherboard.kicad_pro  EZ-USB_motherboard.kicad_sch  EZ-USB_motherboard.net  README.md  decoder1.pro  fp-info-cache
HW/Encoders_motherboard/: .gitignore  Encoders_motherboard.kicad_pcb  Encoders_motherboard.kicad_prl  Encoders_motherboard.kicad_pro  Encoders_motherboard.kicad_sch
HW/MCU_NET_OLED/: .gitignore  MCU_NET_OLED.kicad_pcb  MCU_NET_OLED.kicad_prl  MCU_NET_OLED.kicad_pro  MCU_NET_OLED.kicad_sch  README.md  fp-info-cache
HW/STM32F411CEU6_RotaryDecoder_3X/: .gitignore  STM32F411CEU6_RotaryDecoder_3X.kicad_pcb  STM32F411CEU6_RotaryDecoder_3X.kicad_prl  STM32F411CEU6_RotaryDecoder_3X.kicad_pro  STM32F411CEU6_RotaryDecoder_3X.kicad_sch
HW/Test_Rotary_Encoder/: .gitignore  README.md  Test_Rotary_Encoder.kicad_pcb  Test_Rotary_Encoder.kicad_prl  Test_Rotary_Encoder.kicad_pro  Test_Rotary_Encoder.kicad_sch  fp-info-cache  sym-lib-table
HW/epm570_hat_hor/: .gitignore  epm570_hat_hor.kicad_pcb  epm570_hat_hor.kicad_prl  epm570_hat_hor.kicad_pro  epm570_hat_hor.kicad_sch  fp-info-cache  fp-lib-table
HW/epm570_hat_ver/: .gitignore  epm570_hat_ver.kicad_pcb  epm570_hat_ver.kicad_prl  epm570_hat_ver.kicad_sch  epm570_hat_ver_full.kicad_pcb  epm570_hat_ver_full.kicad_pro  fp-info-cache
HW/lib/: LensRotaryDecoder.kicad_sym
HW/lib/LensRotaryDecoder.pretty/: CY7C68013A_EZ-USB_FX2LP.kicad_mod  CY7C68013A_EZ-USB_FX2LP_WEAK.kicad_mod  EPM570_DEV_BOARD.kicad_mod  EPM570_DEV_BOARD_WEAK.kicad_mod  STM32F4x1Cx_v2.0+ (WEAK1).kicad_mod  W5500.kicad_mod
HW/mojo_hat_tiny/: .gitignore  mojo_hat_tiny.kicad_pcb  mojo_hat_tiny.kicad_prl  mojo_hat_tiny.kicad_pro  mojo_hat_tiny.kicad_sch  sym-lib-table
STM32/: .gitignore  4-Channel Optoisolator User Doc.doc
STM32/.metadata/: .log4j.xml  version.ini
STM32/.metadata/.plugins/org.eclipse.cdt.core/: STM32F103C8.1634050527660.pdom  STM32F103C8.language.settings.xml
STM32/.metadata/.plugins/org.eclipse.e4.workbench/: workbench.xmi
STM32/.metadata/.plugins/org.eclipse.ui.workbench/: workingsets.xml
STM32/STM32F103C8/: .cproject  .project  STM32F103C8.ioc
STM32/STM32F103C8/Core/Inc/: stm32f1xx_hal_conf.h
STM32/STM32F103C8/Core/Src/: main.c
STM32/STM32F103C8/USB_DEVICE/App/: usbd_custom_hid_if.c
STM32/STM32F103C8_RotaryDecoder/: .cproject  .mxproject  .project
STM32/STM32F103C8_RotaryDecoder/USB_DEVICE/App/: usbd_desc.c
STM32/STM32F103C8_RotaryDecoder_1X/: .gitignore  .project
STM32/STM32F103C8_RotaryDecoder_1X/Core/Inc/: stm32f1xx_it.h
STM32/STM32F103C8_RotaryDecoder_1X/Core/Src/: main.c  stm32f1xx_it.c
STM32/STM32F103C8_RotaryDecoder_1X/USB_DEVICE/App/: usbd_desc.c
STM32/STM32F411CEU6/: .cproject  .mxproject  .project  STM32F411CEU6 Debug.launch  STM32F411CEU6.ioc
STM32/STM32F411CEU6/Core/Src/: main.c
STM32/STM32F411CEU6/USB_DEVICE/App/: usbd_custom_hid_if.h  usbd_desc.c
STM32/STM32F411CEU6_FPGA_UART/: .cproject  .gitignore  .project  STM32F411CEU6_FPGA_UART.ioc  STM32F411CEU6_FPGA_UART.launch  checkout_usb.bat  mx.scratch
STM32/STM32F411CEU6_FPGA_UART/Core/Inc/: main.h  stm32f4xx_hal_conf.h  stm32f4xx_it.h
STM32/STM32F411CEU6_FPGA_UART/Core/Src/: 08UKRSTD.h  SSD1306.c  SSD1306.h  TextScreen.c  TextScreen.h  W5500_custom.h  app.c  app.h  int2text.h  main.c  stm32f4xx_hal_msp.c  stm32f4xx_it.c
STM32/STM32F411CEU6_FPGA_UART/USB_DEVICE/App/: usb_device.c  usbd_desc.c
STM32/STM32F411CEU6_RotaryDecoder/: .cproject  .mxproject  .project  STM32F411CEU6_RotaryDecoder.ioc
STM32/STM32F411CEU6_RotaryDecoder/Core/Inc/: stm32f4xx_it.h
STM32/STM32F411CEU6_RotaryDecoder/Core/Src/: main.c  stm32f4xx_hal_msp.c  stm32f4xx_it.c
STM32/STM32F411CEU6_RotaryDecoder/USB_DEVICE/App/: usb_device.h  (+3 more)
STM32/STM32F411CEU6_RotaryDecoder_3X/: .gitignore  .mxproject  .project  STM32F411CEU6 Debug.launch  STM32F411CEU6_RotaryDecoder_3X.ioc  STM32F411CEU6_RotaryDecoder_3X.launch  STM32F411CEUX_FLASH.ld  checkout_usb.bat
STM32/STM32F411CEU6_RotaryDecoder_3X/Release/: STM32F411CEU6_RotaryDecoder_3X.elf
STM32/STM32F411CEU6_RotaryEncoder_3X/: .gitignore  STM32F411CEU6_RotaryEncoder_3X.ioc
po/: POTFILES.in
src/: Makefile.am
src/common/: FreeD.c  FreeD.h  demonize.c  demonize.h  instance.h  ioprio.h  logger.c  logger.h  opts.h  strl.c  strl.h  utils.c  utils.h
src/ez-usb/: Makefile.am  README.md  ez_usb_rot_dec  ez_usb_rot_dec.c  ez_usb_rot_dec.h  freed_sender.c  freed_sender.h  instance.c  instance.h  main.c
src/mojo_rot_dec/: Makefile.am  instance.c  instance.h  main.c  mojo_rot_dec.c  mojo_rot_dec.h
src/stm32_fpga_uart/: Makefile.am  instance.h  main.c  stm32_fpga_uart.c  stm32_fpga_uart.h
src/stm32_rot_dec/: indiemark_reader.c  instance.h  main.c  stm32_rot_dec.h
src/stm32_rot_dec_1x3/: Makefile.am  instance.c  instance.h  main.c  stm32_rot_dec_1x3.c
src/stm32_rot_dec_3x1/: Makefile.am  instance.c  instance.h  main.c  stm32_rot_dec_3x1.c
(+19 files in other folders)
